# homeassistant-cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
Formula/: homeassistant-cli.rb
docs/superpowers/plans/: 2026-04-02-homeassistant-cli.md
docs/superpowers/specs/: 2026-04-02-homeassistant-cli-design.md
homeassistant_cli/: __init__.py  __main__.py
src/: config.rs  main.rs  output.rs  test_support.rs
src/api/: entities.rs  events.rs  mod.rs  services.rs  types.rs  websocket.rs
src/commands/: config.rs  entity.rs  event.rs  init.rs  mod.rs  registry.rs  schema.rs  service.rs
