[package]
name = "homeassistant-cli"
version = "0.1.8"
edition = "2024"
rust-version = "1.90"
description = "Agent-friendly Home Assistant CLI with JSON output, structured exit codes, and schema introspection"
license = "MIT"

[[bin]]
name = "ha"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
owo-colors = "4"
terminal_size = "0.4"
dirs = "6"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
